--- a/style.css
+++ b/style.css
@@ -1,35 +1,56 @@
-
 body {
-    background-color: #d8dde6;
+  background-color: #d8dde6;
 }
 
-
 .title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 300px;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 300px;
 }
 
 .nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 20px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    border: 2px solid black;
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 20px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  border: 2px solid black;
 }
 
 .nav a:hover {
-    background-color: #ddd;
+  background-color: #ddd;
+  color: black;
+}
+
+h1:hover {
+  display: inline-block;
+  animation: weeee 1s infinite alternate;
+}
+
+@keyframes weeee {
+  0% {
     color: black;
   }
+  25% {
+    color: black;
+  }
+  50% {
+    color: white;
+  }
+  75% {
+    color: black;
+  }
+  100% {
+    transform: translateX(101%);
+    color: black;
+  }
+}
